# Automaton

./: .gitignore  .stamp  Dockerfile  LICENSE.txt  MANIFEST  Makefile  README.md  TODO  book.toml  lib.py  pyproject.toml  quickstart.html  requirements.txt  setup.py  t.py
.github/workflows/: docs.yml
Automaton/: __init__.py  contextmenu.py  key.py  lib.py  window.py
automaton/: __init__.py  automaton.py  consts.py  dialog.py  input.py  key.py  keyboard.py  lib.py  menu.py  mouse.py  peripheral.py  window.py
automaton/actions/: __init__.py  action.py  action_emitter.py  context.py  hotkey.py  hotstring.py  macro.py  redirect.py  remap.py
automaton/core/: __init__.py  actionstring.py  automaton.py  consts.py  context.py  device.py  input.py  inputstream.py  macro.py  peripheral.py
automaton_linux.egg-info/: PKG-INFO  SOURCES.txt
book/: 404.html  background.html  index.html  installation.html  intro.html  print.html  searchindex.json
book/api/: automaton.html  index.html
book/book/: 404.html  index.html  installation.html  print.html  searchindex.js  searchindex.json
book/internals/: action_emitter.html  constants.html  context.html  index.html  input.html  input_stream.html  (+1 more)
docs/: 404.html  background.html  index.html  installation.html  intro.html  print.html  quickstart.html  searchindex.js
examples/: automaton.py  device.py  dialog.py  keyboardmouse.py  menu.py  window.py
internals/: action_emitter.html  context.html
misc/: index.html
src/: SUMMARY.md  __init__.py  background.md  installation.md  intro.md  quickstart.md  window.py
(+45 files in other folders)
