[tool.poetry]
name = "automaton-linux"
version = "1.2.2"
description = "An automation library for linux."
authors = ["Abdul-Muiz-Iqbal"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
evdev = "^1.4.0"
multiprocess = "^0.70.12"

[tool.poetry.dev-dependencies]
requests = "^2.26.0"
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.910"
flake8 = "^4.0.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
